Fixed alignment of iOS delete button.

--- a/src/themes/ios/deletableList.less
+++ b/src/themes/ios/deletableList.less
@@ -40,6 +40,7 @@
       top: 0;
       bottom: 0;
       #flex > .display(flex);
+      display: -webkit-flex;
       #flex > .flex-direction(column);
       #flex > .justify-content(center);
       #flex > .align-items(center);
